--- a/src/webparts/displayCollection/components/ItemCard/ItemCard.module.scss
+++ b/src/webparts/displayCollection/components/ItemCard/ItemCard.module.scss
@@ -1,19 +1,41 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
 
 .itemCard {
-  margin: 10px;
-}
+  position: relative;
+  cursor: pointer;
+  display: block;
+  margin: 0px;
+  padding: 0px;
+  height: 350px;
+  width: 258px;
+  border: 1px solid #ddd;
+  
+  .textStyle{
+    padding-left: 20px;
+    padding-top: 15px;
+    font-weight: 400;
+  }
 
-.links {
-  a {
-    text-decoration: none;
-    color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
-
-    &:hover {
-      text-decoration: underline;
-      color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
+  .thumbnail {
+    padding: 4px;
+    cursor: pointer;
+    display: block;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+    border-radius: 0px;
+    -webkit-transition: border .2s ease-in-out;
+    -o-transition: border .2s ease-in-out;
+    transition: border .2s ease-in-out;
+    img {
+        margin-right: auto;
+        margin-left: auto;
+        display: block;
+        // max-width: 100%;
+        width: 250px;
+        height: 300px;
+        border: 0px;
     }
   }
 }
+
