--- a/src/webparts/displayCollection/components/ItemCard/ItemCard.module.scss
+++ b/src/webparts/displayCollection/components/ItemCard/ItemCard.module.scss
@@ -4,25 +4,41 @@
   position: relative;
   cursor: pointer;
   display: block;
-  margin: 0px;
+  margin-left: 0px;
   padding: 0px;
-  height: 350px;
-  width: 258px;
+  height: 335px;
+  width: 279px;
   border: 1px solid #ddd;
+  box-shadow: 1px 1px 5px lightblue;
   
   .textStyle{
-    padding-left: 20px;
-    padding-top: 15px;
+    margin-left: 5px;
+    padding: 5px;
+    margin-top: 1px;
     font-weight: 400;
+    max-height: 70px;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .headingText{
+    margin-left: 5px;
+    padding: 5px;
+    margin-top: 5px;
+    font-weight: 600;
+    font-size: 11px;
   }
 
   .thumbnail {
-    padding: 4px;
+    // padding: 4px;
     cursor: pointer;
     display: block;
     line-height: 1.42857143;
     background-color: #fff;
     border-bottom: 1px solid #ddd;
+    margin-bottom: 5px;
     border-radius: 0px;
     -webkit-transition: border .2s ease-in-out;
     -o-transition: border .2s ease-in-out;
@@ -31,9 +47,9 @@
         margin-right: auto;
         margin-left: auto;
         display: block;
-        // max-width: 100%;
-        width: 250px;
-        height: 300px;
+        max-width: 100%;
+        // width: 270px;
+        height: 200px;
         border: 0px;
     }
   }
