--- a/src/webparts/displayCollection/components/DisplayCollection.module.scss
+++ b/src/webparts/displayCollection/components/DisplayCollection.module.scss
@@ -77,18 +77,18 @@
 
   .filterColumnStyle{
     margin-top: 0px;
-    width: 250px;
+    width: 218px;
   }
 
   .filterOptionsStyle{
     margin-top: 0px;
-    width: 250px;
+    width: 200px;
   }
 
   .dateSortStyle{
-    margin:10px;
+    // margin:10px;
     margin-top: 0px;
-    width: 300px;
+    width: 200px;
   }
 
   .choiceFieldStyle{
